--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
+    "compression": "^1.7.4",
     "dion": "^2.0.0",
     "enti": "^6.4.4",
     "lru-cache": "^6.0.0",
+    "righto": "^6.1.3",
     "sea-lion": "^2.0.2"
   },
   "devDependencies": {
